Adicionando as primeiras configurações

--- a/index.html
+++ b/index.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=search" />
 </head>
 <body>
-    
+    <div id="window">
+        <main>
+            <section id="askCity">
+                <div>
+                    <h1>Clima</h1>
+                    <p>Aqui você consegue saber o clima da sua cidade!</p>
+                </div>
+                <span class="material-symbols-outlined">search</span>
+                <input type="text" name="inputCity" id="inputCity" placeholder="Digite o nome da cidade ">
+            </section>
+            <section id="showWeather">
+                <img src="img/background_site.jpg" alt="">
+            </section>  
+        </main>
+    </div>
 </body>
 </html>
