Site versão 1 terminado

--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
                     <h1>Clima</h1>
                     <p>Aqui você consegue saber o clima da sua cidade!</p>
                 </div>
-                <span class="material-symbols-outlined">search</span>
                 <input type="text" name="inputCity" id="inputCity" placeholder="Digite o nome da cidade ">
+                <span class="material-symbols-outlined" id="search">search</span>
             </section>
             <section id="showWeather">
-                <img src="img/background_site.jpg" alt="">
+                <!-- <img src="img/clima_ensolarado.png" alt="">
+                <article class="result">
+                    <div id="description">
+                        <p>Cidade</p>
+                        <p class="labels">Parcialmente nublado</p>
+                    </div>
+                    <div id="temperature">
+                        <p> 25°</p>
+                    </div>
+                </article> -->
             </section>  
         </main>
     </div>
+    <script src="script/script.js" type="module"></script>
 </body>
 </html>
